# paoo2

./: README.md
Step1/: CMakeLists.txt  tutorial.cxx
src/: CMakeLists.txt  main.cpp
src/clothes/: clothes.h
src/jeans/: jeans.cpp
src/jeans/cargoJeans/: CMakeLists.txt  cargoJeans.cpp
src/socks/: CMakeLists.txt  socks.h
src/src/clothes/: CMakeLists.txt
src/src/jeans/: CMakeLists.txt  jeans.cpp  jeans.h
src/src/jeans/cargoJeans/: cargoJeans.cpp  cargoJeans.h
src/src/socks/: socks.cpp
